--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
 body {
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: aqua;
+    color: black;
     background: blanchedalmond;
+    text-align: center;
+    margin: 10px;
+    padding: 0;
+}
+
+#container {
+    border: 1px solid black;
+    margin: auto;
+    padding: 10px;
+    width: 50%;
+}
+
+#post {
+    font-size: 12px;
 }
