--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    background: blanchedalmond;
+    background: skyblue;
     text-align: center;
     margin: 10px;
     padding: 0;
+}
+
+#cabecera {
+    background: slateblue;
+    color: white;
+    margin: 0px;
+    font-weight: bold;
+    padding: 0.5%;
+}
+
+#cabecera #tagline {
+    font-weight: normal;
+    font-size: 0.8em;
+    padding: 0 0 0 1em;
 }
 
 #container {
