--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    background: blanchedalmond;
+    background: skyblue;
     text-align: center;
     margin: 10px;
     padding: 0;
@@ -15,5 +15,5 @@ body {
 }
 
 #post {
-    font-size: 12px;
+    font-size: 14px;
 }
