--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    background: skyblue;
     text-align: center;
     margin: 10px;
     padding: 0;
