--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,10 @@ body {
 #post {
     font-size: 14px;
 }
+
+#footer {
+    background: #777777;
+    color: white;
+    text-align: center;
+    padding: 0.8px;
+}
